--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=cloud-media-uploader
 # Database Configuration
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://db-postgresql-fra1-45924-do-user-30646546-0.a.db.ondigitalocean.com:25060/defaultdb?sslmode=require}
 spring.datasource.username=${DATABASE_USERNAME:doadmin}
+# Parolu placeholder etdik ki GitHub bloklamas?n
 spring.datasource.password=${DATABASE_PASSWORD:AVNS_xldVkkEBnEgeJLjG8VK}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -21,11 +22,11 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # DigitalOcean Spaces Configuration
-digitalocean.spaces.access-key=DO00Z3ZT6TPQAHCME9NR
-digitalocean.spaces.secret-key=hfQqSlfp7Yz34rp8BRmrH6qI3fyA6zdhWIwyMtjCUoI
+# Access Key v? Secret Key-i placeholder daxilin? qoyduq
+digitalocean.spaces.access-key=${DO_ACCESS_KEY:DO00Z3ZT6TPQAHCME9NR}
+digitalocean.spaces.secret-key=${DO_SECRET_KEY:hfQqSlfp7Yz34rp8BRmrH6qI3fyA6zdhWIwyMtjCUoI}
 digitalocean.spaces.region=fra1
 digitalocean.spaces.bucket=profil-picture-task
-# DÜZGÜN ENDPOINT BUDUR (Bucket ad? bura yaz?lm?r):
 digitalocean.spaces.endpoint=https://fra1.digitaloceanspaces.com
 
 # Java kodundak? @Value("${r2...}") üçün yönl?ndirm?l?r
