Fix: Normalize application.properties for cloud env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,29 @@
 spring.application.name=cloud-media-uploader
 
 # Database Configuration
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://db-postgresql-fra1-45924-do-user-30646546-0.a.db.ondigitalocean.com:25060/defaultdb?sslmode=require}
-spring.datasource.username=${DATABASE_USERNAME:doadmin}
-# Parolu placeholder etdik ki GitHub bloklamas?n
-spring.datasource.password=${DATABASE_PASSWORD:AVNS_xldVkkEBnEgeJLjG8VK}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Connection Pool Settings
-spring.datasource.hikari.maximum-pool-size=1
-spring.datasource.hikari.minimum-idle=0
-spring.datasource.hikari.initialization-fail-timeout=10000
-
-# JPA/Hibernate
+# Enforce using Environment Variables in Cloud (SPRING_DATASOURCE_URL, etc.)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/cloud_media}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# File Upload Settings
+# File Upload configuration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# DigitalOcean Spaces Configuration
-# Access Key v? Secret Key-i placeholder daxilin? qoyduq
-digitalocean.spaces.access-key=${DO_ACCESS_KEY:DO00Z3ZT6TPQAHCME9NR}
-digitalocean.spaces.secret-key=${DO_SECRET_KEY:hfQqSlfp7Yz34rp8BRmrH6qI3fyA6zdhWIwyMtjCUoI}
-digitalocean.spaces.region=fra1
-digitalocean.spaces.bucket=profil-picture-task
-digitalocean.spaces.endpoint=https://fra1.digitaloceanspaces.com
+# DigitalOcean Spaces / S3 Configuration
+# These keys align with the previous file's intent but cleaned up
+digitalocean.spaces.region=${DO_SPACES_REGION:fra1}
+digitalocean.spaces.endpoint=${DO_SPACES_ENDPOINT:https://fra1.digitaloceanspaces.com}
+digitalocean.spaces.bucket=${DO_SPACES_BUCKET:profil-picture-task}
+digitalocean.spaces.access-key=${DO_SPACES_KEY}
+digitalocean.spaces.secret-key=${DO_SPACES_SECRET}
 
-# Java kodundak? @Value("${r2...}") üçün yönl?ndirm?l?r
+# Mappings for internal service usage
 r2.accessKeyId=${digitalocean.spaces.access-key}
 r2.secretAccessKey=${digitalocean.spaces.secret-key}
 r2.endpointUrl=${digitalocean.spaces.endpoint}
 
-# Allowed file types
+# Application Configuration
 upload.allowed-types=image/jpeg,image/png,image/jpg,image/webp
